@@ -1,3 +1,7 @@
+10-05-2023 (UCF v0.5.0)
+Events
+- Secret Portal: Removed
+
 10-04-2023 (UCF v0.4.0)
 Watcher
 Cards
